# mongodb-crew-ai

./: .env.example  mongodb_atlas_report.html  pyproject.toml  readme.md  report.md  test_html_gen.py
src/ai_latest_development/: crew.py  main.py
src/ai_latest_development/config/: agents.yaml  tasks.yaml
src/ai_latest_development/tools/: atlas_cost_tool.py  atlas_performance_tool.py  atlas_security_tool.py  llm_html_generator.py  mongodb_compliance_tool.py  mongodb_schema_tool.py  report_synthesis_tool.py
